--- a/css/admin.less
+++ b/css/admin.less
@@ -203,7 +203,7 @@ input[type=date]::-webkit-calendar-picker-indicator { opacity: 0; }
           }
           .fiq-list-view { .fs(12); color:#fff; .wh(95,40); .lh(40); .tc; .br(4); .bgc(#152B67); .mt(68); }
         }
-        &.on { .block; }
+        &.fiq-on { .block; }
       }
     }
   }
